Alarm clock updates

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Alarm clock generation</title>
+        <title>Alarm Clock (Demo AlpineJs)</title>
 
         <script nomodule src="https://unpkg.com/browser-es-module-loader/dist/babel-browser-build.js"></script>
         <script nomodule src="https://unpkg.com/browser-es-module-loader"></script>
